# reversi

./: .gitignore  README.md  dockerfile
backend/: Dockerfile  pyproject.toml  run.ps1  run.sh
backend/src/components/: board.rs  minimax.rs
desktop/: CMakeLists.txt  readme.md
desktop/src/: Board.cpp  Controller.cpp  aps105.c  main.cpp
desktop/src/include/: Board.h  Controller.h  aps105.h  main.h
frontend/: index.html
frontend/src/: App.jsx  index.css
frontend/src/components/Board/: Board.jsx
frontend/src/components/EndScreen/: EndScreen.css  EndScreen.jsx
frontend/src/components/GameScreen/: GameScreen.css  GameScreen.jsx
frontend/src/components/PassToast/: PassToast.jsx
frontend/src/components/Piece/: Piece.jsx
frontend/src/components/StartScreen/: StartScreen.css
web/: README.md
web/backend/: Cargo.toml  run.ps1
web/backend/app/: __init__.py  main.py
web/backend/src/: lib.rs
web/backend/src/components/: mod.rs
web/frontend/src/components/Board/: Board.css
web/frontend/src/components/PassToast/: PassToast.css
web/frontend/src/components/Piece/: Piece.css
web/frontend/src/components/StartScreen/: StartScreen.jsx
