# defines requirements for uv

[build-system]
requires = ["maturin>=1.3,<2.0"]
build-backend = "maturin"

[project]
name = "reversi_backend"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110",
    "pydantic==2.11.7",
    "uvicorn[standard]>=0.29",
]

[tool.maturin]
module-name = "rs_mod"    
features = ["pyo3/extension-module"] 